Remove usages of CompactSortedFilesTestDataHelper writeLeafFile and expectedLeafFile